2006-08-15  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: Cleanup on upgrades.

2006-08-14  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_10): Add an upgrade
	path from 2.1.91.
	* src/RelLib/_AttributeType.py: Add new attribute types for events
	and event references.
	* src/RelLib/_EventRef.py: Add attribute list.
	* src/RelLib/_Event.py: Add attribute list.

2006-08-14  Brian Matherly  <brian@gramps-project.org>
	* src/gramps.py: mask strange Windows logging error on close

2006-08-14  Alex Roitman  <shura@gramps-project.org>
	* src/docgen/PdfDoc.py: Work for both utf8 and latin-1 capable
	reportlab versions.
	* src/Filters/Rules/Family/_ChildHasNameOf.py (description): Typo.
	* src/Filters/Rules/Family/_ChildHasIdOf.py (description): Typo.
	* src/Filters/Rules/Family/_FatherHasNameOf.py (description): Typo.
	* src/Filters/Rules/Family/_FatherHasIdOf.py (description): Typo.
	* src/Filters/Rules/Family/_MotherHasNameOf.py (description): Typo.
	* src/Filters/Rules/Family/_MotherHasIdOf.py (description): Typo.
	* src/Makefile.am (docs): Use new project website in API docs.

2006-08-14  Don Allingham  <don@gramps-project.org>
	* src/DispalyTabs/_NoteTab.py: don't add text window using viewport (#344)
	* src/DispalyTabs/_TextTab.py: don't add text window using viewport (#344)

2006-08-13  Brian Matherly  <brian@gramps-project.org>
	* src/ManagedWindow.py: add present() to force parent focus (#0000342)

2006-08-13  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditEventRef.py: add attribute list, remove cause
	* src/Editors/_EditEvent.py: add attribute list, remove cause
	* src/glade/gramps.glade: event fixes

2006-08-13  Alex Roitman  <shura@gramps-project.org>
	* NEWS: Update.
	* configure.in: Increment the version.
	* Release: the 2.1.91 has been released.

2006-08-13  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MediaView.py: fix drag-n-drop